Z-index fix

--- a/bundles/mapping/mapmodule/scss/layersselection.scss
+++ b/bundles/mapping/mapmodule/scss/layersselection.scss
@@ -1,9 +1,10 @@
 /* Mixins */
 div.mapplugin.layerselection {
+  clear:both;
   height: 37px;
   overflow: visible;
   max-width: 200px;
-  z-index: 100000000000000 !important;
+  z-index: 15001 !important;
 
   div.content {
     background-color: white;
